# libgcrypt

./: CMakeLists.txt
random/: random-csprng.c  random-drbg.c  random-system.c  random.c
src/: context.c  fips.c  global.c  hwf-x86.c  hwfeatures.c  misc.c  secmem.c
